# caddy-chatbot

./: .gitattributes  .gitignore  .nojekyll  .pre-commit-config.yaml  LICENSE  Makefile  README.md  _quarto.yml  docker-compose.yml  env.json.example  example.env  index.html  index.qmd  load_env.py  packaged.yaml  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.in  requirements.txt  robots.txt  samconfig.toml  search.json  sitemap.xml  template.yaml  test.env
.devcontainer/: devcontainer.json
.github/workflows/: automated-deployment-dev.yml  automated-deployment-fastapi.yml  automated-deployment-prod.yml  automated-deployment.yml  automated-testing-dev.yml  automated-testing-prod.yml  automated-testing.yml  docs.yml  lock-requirements.yml
anonymise/: handlers.py
auth/: auth.py  requirements.txt
caddy/conversations/: conversations.py  requirements-lock.txt  requirements.in  requirements.txt
caddy/conversations/caddy/: core.py
caddy/llm/: Dockerfile  answer.py  handlers.py  llm.py  models.py  modules.py  prompt.py  requirements-lock.txt  requirements.in  requirements.txt  responses.py  retrievers.py  utils.py
caddy/llm/caddy/: core.py
caddy/llm/model/: tokenizer.json
caddy/supervise/: events.py  models.py  requirements-lock.txt  requirements.in  requirements.txt  responses.py  supervise.py  survey.py  utils.py
caddy/supervise/caddy/: core.py  events.py
caddy_chatbot/: Dockerfile
caddy_chatbot/conversations/: conversations.py
caddy_chatbot/conversations/caddy/: core.py
caddy_chatbot/llm/: llm.py  requirements.txt
caddy_chatbot/llm/caddy/: core.py
caddy_chatbot/src/: app.py  boot.py  caddy.py
caddy_chatbot/src/caddy_core/: components.py  core.py  hosting_environment.py  models.py  routes.py
caddy_chatbot/src/integrations/: caddy.py
caddy_chatbot/supervise/: Dockerfile  supervise.py
caddy_core/: setup.py
caddy_core/src/: enrolment.py  message_handling.py  models.py
conversations/: Dockerfile  chat.py  handlers.py  models.py  requirements.txt  responses.py  utils.py
docs/: about_caddy.html  about_caddy.qmd  database_strucure.md  mvp_architecture.md
evaluation_app/: Dockerfile  app.py  requirements.txt  styling.py
evaluation_app/templates/: base.html  index.html  login.html  question_details.html
events/: ProcessChatMessageEvent.json  cardClicked.json  event.json
infra/: opensearch.yaml  template.yaml
lambda_functions/conversations/: Dockerfile
lambda_functions/llm/caddy/: core.py
llm/: Dockerfile  answer.py  handlers.py  llm.py  models.py  modules.py  prompt.py  requirements.txt  responses.py  retrievers.py  utils.py
llm/embedding_model/: config.json  sentence_bert_config.json  tokenizer_config.json  vocab.txt
llm/model/: README.md  config.json  config_sentence_transformers.json  modules.json  sentence_bert_config.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
notebooks/: api_dev.ipynb  caddy demo.ipynb  dynamo_connection.ipynb  dynamo_local_testing.ipynb  dynamo_testing 2.ipynb  dynamodb_stream_test.ipynb  google_chat.ipynb  llm_playground.ipynb  llm_testing.ipynb  opensearch_retrieval.ipynb  web_scraping.ipynb
site_libs/bootstrap/: bootstrap.min.css
supervise/: events.py  models.py  responses.py  supervise.py  survey.py  utils.py
teamsTest/: README.md  package-lock.json  package.json  teamsapp.local.yml  teamsapp.yml
teamsTest/appPackage/: manifest.json
teamsTest/infra/: azure.parameters.json
teamsTest/src/: config.js
tests/: conftest.py  test_embedding_local.py  test_setup_dynamo.py
tests/caddy_components/: conversations.py  conversations_test.py  enrolment_test.py  llm.py  supervise.py
tests/events/: CaddyLocalMessageEvent.json  CaddyLocalMessageEvent_PII.json  CaddyLocalMessageEvent_UnknownDomain.json  CaddyLocalMessageEvent_UnknownUser.json  ProcessChatMessageEvent.json  SupervisionEvent.json  UserMessageEvent.json  cardClicked.json  event.json  gChatMessageEvent.json  supervision.json
tests/notebooks/: copypaste.html  copypaste.ipynb  evaluation.ipynb  rct_evaluation.ipynb  topic_evaluation.html  topic_evaluation.ipynb  understanding_message_types.ipynb
tests/ragas/: ragas_pipeline.py
users/: models.py  utils.py
utils/: route_loader.py  setup_dynamo.py
(+104 files in other folders)
